# lumys-os

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  docker-compose.yml  flake.nix  lumys.toml.example
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
agents/analyst/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/kanban-analyst/: agent.toml
agents/kanban-architect/: agent.toml
agents/kanban-backend/: agent.toml
agents/kanban-devops/: agent.toml
agents/kanban-frontend/: agent.toml
agents/kanban-master/: agent.toml
agents/kanban-qa/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
agents/test-engineer/: agent.toml
agents/translator/: agent.toml
agents/travel-planner/: agent.toml
agents/tutor/: agent.toml
agents/writer/: agent.toml
crates/lumys-api/: Cargo.toml
crates/lumys-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/lumys-api/static/: index_body.html  index_head.html  manifest.json
crates/lumys-api/static/css/: components.css  layout.css  theme.css
crates/lumys-api/static/js/: api.js  app.js  katex.js
crates/lumys-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  comms.js  hands.js  logs.js  overview.js  runtime.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/lumys-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/lumys-channels/: Cargo.toml
crates/lumys-channels/src/: bluesky.rs  bridge.rs  dingtalk.rs  dingtalk_stream.rs  discord.rs  discourse.rs  email.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  lib.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  router.rs  signal.rs  slack.rs  teams.rs  telegram.rs  threema.rs  twist.rs  twitch.rs  types.rs  (+6 more)
crates/lumys-channels/tests/: bridge_integration_test.rs
crates/lumys-cli/: Cargo.toml
crates/lumys-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/lumys-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/lumys-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  comms.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/lumys-desktop/: Cargo.toml  tauri.conf.json
crates/lumys-desktop/capabilities/: default.json
crates/lumys-desktop/src/: commands.rs  lib.rs  main.rs  server.rs  shortcuts.rs  tray.rs  updater.rs
crates/lumys-extensions/: Cargo.toml
crates/lumys-extensions/integrations/: github.toml  gmail.toml  google-calendar.toml  google-drive.toml  sqlite-mcp.toml  teams-mcp.toml
crates/lumys-extensions/src/: bundled.rs  credentials.rs  installer.rs  lib.rs  oauth.rs  registry.rs  vault.rs
crates/lumys-hands/: Cargo.toml
crates/lumys-hands/bundled/browser/: SKILL.md
crates/lumys-hands/bundled/trader/: SKILL.md
crates/lumys-hands/bundled/twitter/: HAND.toml
crates/lumys-hands/src/: lib.rs  registry.rs
crates/lumys-kernel/: Cargo.toml
crates/lumys-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/lumys-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/lumys-memory/: Cargo.toml
crates/lumys-memory/src/: consolidation.rs  knowledge.rs  lib.rs  semantic.rs  session.rs  structured.rs  substrate.rs  usage.rs
crates/lumys-migrate/: Cargo.toml
crates/lumys-migrate/src/: lib.rs  openclaw.rs  report.rs
crates/lumys-migrate/tests/: provider_json5_agents.rs  provider_json5_default_model.rs  provider_json5_provider_catalog.rs  provider_legacy_yaml.rs
crates/lumys-runtime/: Cargo.toml
crates/lumys-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  auth_cooldown.rs  browser.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_driver.rs  mcp.rs  (+16 more)
crates/lumys-skills/: Cargo.toml
crates/lumys-types/: Cargo.toml
crates/lumys-wire/: Cargo.toml
deploy/: lumys.service
docs/: README.md  agent-templates.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  configuration.md  desktop.md  getting-started.md  launch-roadmap.md  mcp-a2a.md  production-checklist.md  providers.md  security.md  skill-development.md  troubleshooting.md  workflows.md
scripts/: install.ps1  install.sh
scripts/docker/: install-smoke.Dockerfile
sdk/javascript/: index.d.ts  index.js  package.json
sdk/python/: lumys_client.py  lumys_sdk.py  setup.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+36 files in other folders)
