[package]
name = "lumys-hands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hands system for Lumys OS — curated autonomous capability packages"

[dependencies]
lumys-types = { path = "../lumys-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
