[package]
name = "lumys-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the Lumys OS"

[dependencies]
lumys-types = { path = "../lumys-types" }
lumys-memory = { path = "../lumys-memory" }
lumys-runtime = { path = "../lumys-runtime" }
lumys-skills = { path = "../lumys-skills" }
lumys-hands = { path = "../lumys-hands" }
lumys-extensions = { path = "../lumys-extensions" }
lumys-wire = { path = "../lumys-wire" }
lumys-channels = { path = "../lumys-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
