[package]
name = "lumys-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory substrate for the Lumys OS"

[dependencies]
lumys-types = { path = "../lumys-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
